# omlet

./: .eslintrc.js  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md
.husky/: pre-commit
cli/crates/cli/: Cargo.toml
cli/crates/cli/src/: main.rs
cli/crates/cli/src/cli/: analyze.rs  file_dates.rs  mod.rs  parse.rs
cli/crates/core/: Cargo.toml
cli/crates/core/src/: lib.rs  module_resolver.rs
cli/crates/core/src/analyzer/: mod.rs  styled_components.rs
cli/crates/core/src/parser/: inspector.rs  mod.rs  symbol.rs
cli/crates/core/tests/: test_analyzer.rs  test_parser.rs
cli/crates/core/tests/snapshots/: test_analyzer__analyze_color_exports-2.snap  test_analyzer__analyze_color_exports.snap  test_analyzer__analyze_custom_alias-2.snap  test_analyzer__analyze_custom_alias.snap  test_analyzer__analyze_custom_export-2.snap  test_analyzer__analyze_custom_export.snap  test_analyzer__analyze_lerna_monorepo-2.snap  test_analyzer__analyze_lerna_monorepo.snap  test_analyzer__analyze_monorepo_with_nested_packages-2.snap  test_analyzer__analyze_monorepo_with_nested_packages.snap  test_analyzer__analyze_multi_project-2.snap  test_analyzer__analyze_multi_project-3.snap  test_analyzer__analyze_multi_project-4.snap  test_analyzer__analyze_multi_project.snap  test_analyzer__analyze_npm_dependency_alias-2.snap  test_analyzer__analyze_npm_dependency_alias.snap  test_analyzer__analyze_npm_monorepo-2.snap  test_analyzer__analyze_npm_monorepo.snap  test_analyzer__analyze_nx_monorepo-2.snap  test_analyzer__analyze_nx_monorepo.snap  test_analyzer__analyze_overridden_custom_alias-2.snap  test_analyzer__analyze_overridden_custom_alias.snap  test_analyzer__analyze_pnpm_monorepo.snap  test_analyzer__analyze_pnpm_monorepo_with_tspaths-2.snap  test_analyzer__analyze_pnpm_monorepo_with_tspaths.snap  test_analyzer__analyze_props-2.snap  test_analyzer__analyze_props.snap  test_analyzer__analyze_typescript_absolute_import-2.snap  (+268 more)
cli/crates/node/: Cargo.toml
cli/crates/node/src/: lib.rs
(+1001 files in other folders)
