[package]
name = "node"
version = "0.1.0"
edition = "2021"

[lib]
name = "node"
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.1.0", default-features = false, features = ["napi4", "serde-json", "tokio_rt"] }
napi-derive = "2.1.0"
serde_json = "1.0.79"
memory-stats = "1.1.0"

git_utils = { path = "../git_utils" }
logger = { path = "../logger" }
omlet = { path = "../core" }
utils = { path = "../utils" }
serde = "1.0.145"
relative-path = "1.7.2"

[dev-dependencies]
snap = { path = "../snap" }

[build-dependencies]
napi-build = "1.2.1"

